# ai_website_builder_next

./: .env.local  .gitignore  README.md  config.py  main.py  pyproject.toml
ai_worker/: claude.py  component_worker.py  factory.py  gemini.py  main.py  openai.py  playwright_tester.py
ai_worker/utils/: prompts.py  save_file.py
assets/templates/components/: DisableDraftMode.tsx
assets/templates/nextjs/: disable-draft.ts  layout.tsx  page.tsx
assets/templates/sanity/: client.ts  fetch.ts  live.ts  sanity.config.ts  token.ts
db/: README.md  manager.py  migrate_to_multi_db.py  migration.py  state.py
figma_worker/: figma_connection.py  main.py
project_init/: env_writer.py  git_init.py  main.py  runner.py  scaffold.py
