[project]
name = "ai-website-builder-next"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncio>=4.0.0",
    "langgraph>=1.1.3",
    "pillow>=11.1.0",
    "pydantic-settings>=2.13.1",
    "requests>=2.32.5",
    "sqlmodel>=0.0.37",
    "typing>=3.10.0.0",
]
